--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
+    // Firebase
+    implementation 'com.google.firebase:firebase-core:16.0.6'
+
     // Displaying images
     implementation 'com.github.bumptech.glide:glide:3.6.1'
 }
+// ADD THIS AT THE BOTTOM
+apply plugin: 'com.google.gms.google-services'
