--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,12 @@ dependencies {
 
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-media-compat:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
 
     // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-database:16.0.5' //Realtime database
 
     // Displaying images
     implementation 'com.github.bumptech.glide:glide:3.6.1'
