--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,14 @@ dependencies {
     // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-database:16.0.5' //Realtime database
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+
+    // Google Sign In SDK (only required for Google Sign In)
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+
+    // Firebase UI
+    // Used in FirebaseUIActivity.
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
 
     // Displaying images
     implementation 'com.github.bumptech.glide:glide:3.6.1'
