--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.5' //Realtime database
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.firebase:firebase-storage:16.0.5' //Firebase storage
+    implementation 'com.google.firebase:firebase-messaging:17.3.4' // Messaging
 
     // Google Sign In SDK (only required for Google Sign In)
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
